# DNABERT

./: EXPERIMENT_GUIDE.md  README.md  environment.yml  pyproject.toml
experiments/final_promoter_k5_len200/checkpoints/: kmer_logreg.joblib
experiments/final_promoter_k5_len200/processed/: preprocess_summary.json  test.csv  val.csv
experiments/final_promoter_k5_len200/results/: kmer_baseline_metrics.csv  kmer_baseline_predictions.csv  pretrained_embedding_pca.csv  pretrained_metrics.csv  pretrained_predictions.csv  random_embedding_pca.csv  random_metrics.csv  random_predictions.csv
experiments/final_promoter_k6_len200/results/: kmer_baseline_metrics.csv  kmer_baseline_predictions.csv  pretrained_embedding_pca.csv  pretrained_metrics.csv  pretrained_predictions.csv  random_embedding_metadata.csv  random_embedding_pca.csv  random_metrics.csv
experiments/final_promoter_k6_len300/checkpoints/: kmer_logreg.joblib
experiments/final_promoter_k6_len300/processed/: val.csv  (+1 more)
experiments/report_figures/: final_metrics_summary.csv
scripts/: preprocess_data.py  run_experiment.py
src/dnabert_lite/: __init__.py  attention.py  baseline.py  cli.py  data.py  evaluate.py  finetune.py  model.py  preprocess.py  pretrain.py  tokenizer.py  training_utils.py  visualize.py
src/dnabert_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_attention.py  test_baseline.py  test_evaluate.py  test_finetune.py  test_model_forward.py  test_preprocess_fasta.py  test_pretrain.py  test_run_experiment.py  test_tokenizer.py  test_visualize.py
(+16 files in other folders)
