[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnabert-lite"
version = "0.1.0"
description = "A teaching-oriented lightweight DNABERT-style package."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
ml = [
  "torch>=2",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
]

[project.scripts]
dnabert-lite = "dnabert_lite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
